<resources>
    <string name="app_name">JLibs</string>
    <string name="xiangji">相机</string>
    <string name="xiangce">相册</string>
    <string name="quxiao">取消</string>
    <string name="shiyong">使用</string>

    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_footer_hint_ready">松开加载更多</string>
    <string name="xlistview_header_hint_success">加载成功</string>
    <string name="xlistview_header_hint_net_connected_false">当前网络不可用</string>
    <string name="xlistview_footer_hint_no_more_to_read">没有更多了</string>
    <string name="xlistview_header_refreshing">正在刷新&#8230;</string>
    <string name="xlistview_header_refresh_done">刷新成功</string>

    <string name="base_list_view_empty_view">没有内容哦~</string>
    <string name="base_list_view_error_network">网络连接失败,请检查网络设置!</string>

    <string name="plugin_photo_only_choose_num">超出可选图片张数</string>
    <string name="plugin_photo_finish">完成</string>
    <string name="plugin_photo_finish_format">完成(%1$d/%2$d)</string>
    <string name="plugin_photo_invalidSD">sdcard无效或没有插入！</string>
    <string name="plugin_photo_photo">选择相册</string>
    <string name="plugin_photo_album">相册</string>
    <string name="plugin_photo_preview">预览</string>
    <string name="plugin_photo_preview_format">预览(%1$d/%2$d)</string>
    <string name="plugin_photo_camera_cancel">取消</string>
    <string name="plugin_photo_no_photo">相册没有图片</string>
    <string name="plugin_photo_pictrue">图片</string>
    <string name="plugin_photos">照片</string>
    <string name="plugin_photo_delete">删除</string>
    <string name="plugin_photo_back">返回</string>

    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
</resources>
