<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded,UselessParent,RelativeOverlap">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_menu_height"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_for_pressed_no_corners"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/cancle"
            android:textColor="@color/normal_brief_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title"
            android:textColor="@color/normal_content_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_select"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_for_pressed_no_corners"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/commit"
            android:textColor="@color/lib_blue_login_bg"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_bg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp">

            <com.jey.jlibs.view.DatePickerView
                android:id="@+id/year_pv"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/year"
                android:textColor="@color/text2"
                android:textSize="18sp" />

            <com.jey.jlibs.view.DatePickerView
                android:id="@+id/month_pv"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/month"
                android:textColor="@color/text2"
                android:textSize="18sp" />

            <com.jey.jlibs.view.DatePickerView
                android:id="@+id/day_pv"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/day_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/day"
                android:textColor="@color/text2"
                android:textSize="18sp" />

            <com.jey.jlibs.view.DatePickerView
                android:id="@+id/hour_pv"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/hour_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hour"
                android:textColor="@color/text2"
                android:textSize="18sp" />

            <com.jey.jlibs.view.DatePickerView
                android:id="@+id/minute_pv"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/minute_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/minute"
                android:textColor="@color/gray_text"
                android:textSize="18sp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>