<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/plugin_camera_white">

    <include
        android:id="@+id/headview"
        layout="@layout/v_top_bar_select_contact" />

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="3dp"
        android:background="@color/plugin_camera_white">

        <TextView
            android:id="@+id/tv_album"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/plugin_photo_album"
            android:textColor="@color/plugin_camera_black"
            android:textSize="@dimen/plugin_camera_top_text_size" />

        <TextView
            android:id="@+id/tv_preview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/plugin_photo_preview"
            android:textColor="@color/plugin_camera_light_gray"
            android:textSize="@dimen/plugin_camera_top_text_size" />
    </RelativeLayout>

    <View
        android:id="@+id/v_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@id/bottom_layout"
        android:background="@color/plugin_camera_light_gray" />

    <GridView
        android:id="@+id/myGrid"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/v_bottom_line"
        android:layout_below="@id/headview"
        android:layout_centerInParent="true"
        android:layout_marginTop="2dp"
        android:background="@color/plugin_camera_white"
        android:horizontalSpacing="4dp"
        android:numColumns="4"
        android:verticalSpacing="4dp" />

    <TextView
        android:id="@+id/myText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/plugin_photo_no_photo"
        android:textColor="@android:color/black"
        android:visibility="gone" />

</RelativeLayout>